deployments/openshift/kustomize/base/fider/fider-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fider
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fider
  template:
    metadata:
      labels:
        app: fider
    spec:
      containers:
        - name: fider
          image: getfider/fider:main
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "160m"
