deployments/openshift/kustomize/base/fider/fider-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fider
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: fider
