deployments/openshift/kustomize/base/fider/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fider-postgres
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: fider-postgres
