deployments/openshift/kustomize/base/fider/fider-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fider-route
spec:
  host: fider-route-f3c07a-dev.apps.silver.devops.gov.bc.ca
  port:
    targetPort: 3000
  to:
    kind: Service
    name: fider
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
