deployments/openshift/kustomize/base/fider/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fider
spec:
  path: /fider
  to:
    kind: Service
    name: fider
  tls:
    termination: edge
