deployments/openshift/kustomize/base/fider/np.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-all-ingress-fider
spec:
  podSelector:
    matchLabels:
      app: fider
  ingress:
    - {}
  policyTypes:
    - Ingress
